--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.3",
+    "remark-flexible-containers": "^1.0.6",
     "remark-gfm": "^3.0.1",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
     "remark-rehype": "^10.1.0",
