--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.1.0",
+    "mdast-builder": "^1.1.1",
+    "mdast-util-find-and-replace": "^3.0.0",
     "rehype-stringify": "^9.0.3",
     "remark": "^14.0.3",
     "remark-flexible-containers": "^1.0.6",
     "remark-gfm": "^3.0.1",
+    "remark-heading-id": "^1.0.0",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
     "remark-rehype": "^10.1.0",
-    "remark-toc": "^8.0.1",
     "remark-torchlight": "^0.0.5",
+    "remark-validate-links": "^12.1.1",
     "vfile-reporter": "^8.0.0"
   },
   "devDependencies": {
